--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
@@ -47,6 +47,9 @@ bid4free-workspace
     .md-button
       margin-top: -8px
 
+    .tableTitlesInput
+      margin-top: -20px
+
   .saveContainer
     label
       margin-top: 5px
@@ -59,6 +62,10 @@ bid4free-workspace
     overflow-x: hidden
     border: 1px solid rgba(0,0,0,0.1)
     height: 600px
+
+    .tableTitles
+      margin-top: 20px
+      color: rgba(0,0,0,0.6)
 
   .items label
     font-weight: normal
