--- a/plugins/bid4free/bid4free.jade
+++ b/plugins/bid4free/bid4free.jade
@@ -9,7 +9,7 @@
 
 		div(layout="row", layout-padding, flex="50")
 			bid-image(layout="column", flex)
-			bid-docs(layout="column", flex, package-name="vm.selectedPackageName")
+			bid-docs(layout="column", flex, package-name="vm.selectedPackageName", invite-accepted="vm.packageInviteAccepted")
 			bid-workspace(layout="column", flex, package-name="vm.selectedPackageName", invite-accepted="vm.packageInviteAccepted")
 
 	// Main Contractor
