--- a/plugins/bid4free/bidDocs.jade
+++ b/plugins/bid4free/bidDocs.jade
@@ -4,8 +4,13 @@
 			h2
 				span Documents
 
-	md-content.bidInfoCardContent(ng-if="vm.showDocs")
+	md-content.bidInfoCardContent
 		md-list
+			md-list-item(ng-repeat="doc in vm.predefinedDocs", ng-click="vm.showDoc($index)", aria-label="Doc")
+				md-icon(class="fa fa-file-pdf-o")
+				p {{doc.title}}
+
+		md-list(ng-if="vm.bidInviteAccepted")
 			md-list-item(ng-repeat="doc in vm.docs", ng-click="vm.showDoc($index)", aria-label="Doc")
 				md-icon(class="fa fa-file-pdf-o")
 				p {{doc.title}}
