--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
@@ -67,6 +67,10 @@ bid4free-workspace
       margin-top: 20px
       color: rgba(0,0,0,0.6)
 
+    .keyvalueValue
+      margin: 10px 0 -10px 0
+      overflow: hidden
+
   .items label
     font-weight: normal
     color: rgba(0, 0, 0, 0.5)
