--- a/plugins/bid4free/bidDocsDialog.jade
+++ b/plugins/bid4free/bidDocsDialog.jade
@@ -9,20 +9,20 @@ md-dialog.bidDocsDialog(aria-label="Document",  ng-cloak)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon(md-font-icon="fa fa-close", aria-label="Close dialog")
 
-	md-content(flex, layout-padding, ng-if="vm.docIndex===0")
-		md-list
-			md-list-item.md-1-line.boqListTitles
-				p(flex="40") Type
-				p.boqListRight(flex="15") Code
-				p.boqListRight(flex="15") Quantity
-			md-list-item.md-1-line(ng-repeat="item in vm.boq")
-				p(flex="40") {{item.type}}
-				p.boqListRight(flex="15") {{item.code}}
-				p.boqListRight(flex="15") {{item.quantity}}
+	div(ng-if="vm.showPredefinedDoc")
+		md-content(flex, layout-padding, ng-if="vm.docIndex===0")
+			md-list
+				md-list-item.md-1-line.boqListTitles
+					p(flex="40") Type
+					p.boqListRight(flex="15") Code
+					p.boqListRight(flex="15") Quantity
+				md-list-item.md-1-line(ng-repeat="item in vm.boq")
+					p(flex="40") {{item.type}}
+					p.boqListRight(flex="15") {{item.code}}
+					p.boqListRight(flex="15") {{item.quantity}}
 
-	md-content.bidDocsSow(flex, layout-padding, ng-if="vm.docIndex===1")
-		//p(ng-repeat="paragraph in vm.sowProcessed") {{paragraph}}
-		p(ng-bind-html="vm.sow")
+		md-content.bidDocsSow(flex, layout-padding, ng-if="vm.docIndex===1")
+			p(ng-bind-html="vm.sow")
 
-	div(flex, ng-if="vm.docIndex>1")
+	div(flex, ng-if="vm.showDoc")
 		iframe(type="application/pdf", ng-src="{{vm.trustSrc(vm.pdfUrl)}}")
