--- a/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
+++ b/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
@@ -58,8 +58,12 @@
 								// Key/Value
 								div(ng-if="section.type==='keyvalue'")
 									md-content.items(ng-repeat="item in vm.sections[$index].items track by $index", layout="row", layout-align="start center")
-										label(flex="20") {{item.keys[0].name}}
-										label(flex) {{item.values[0]}}
+										label(flex="25") {{item.keys[0].name}}
+										//label(flex) {{item.values[0]}}
+										md-input-container.md-block.keyvalueValue(flex="65")
+											label
+											input(ng-model="item.values[0]", name="Value")
+
 								// Table
 								div(ng-if="section.type==='table'")
 									md-content.items(ng-repeat="values in vm.sections[$index].items[0].values track by $index", layout="row", layout-align="space-between center")
@@ -79,7 +83,7 @@
 											md-input-container.md-block(flex="20")
 												label Name
 												input(ng-model="section.newItemName", name="Item Name")
-											md-input-container.md-block(flex="80")
+											//md-input-container.md-block(flex="80")
 												label Description
 												input(ng-model="section.newItemDescription", name="Item Description")
 											div(flex="10")
