--- a/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
+++ b/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
@@ -10,39 +10,39 @@
 
 	md-content(flex, layout="row")
 		div(flex="50", layout="row", layout-align="start start")
-			md-tabs(md-dynamic-height, md-border-bottom, flex="90", md-selected="vm.selectedTab")
+			md-tabs(md-border-bottom, flex="90", md-selected="vm.selectedTab", layout="column")
 				// Terms & Conditions
 				md-tab(label="Terms & Conditions")
 					md-content.md-padding
 						// Add new section
 						.sectionInput(layout="column")
-							div(layout="row", layout-align="start center")
-								md-input-container.md-block(flex="40")
-									label Section Title
-									input(ng-model="vm.sectionTitle", name="Section Title")
-								.sectionInputRadioGroup(layout="row", flex="40", layout-align="space-between center")
-									| Section type:
+							div(layout="row", layout-align="space-between")
+								md-input-container.md-block(flex="40", md-no-float)
+									input(ng-model="vm.sectionTitle", placeholder="Section Title")
+								.sectionInputRadioGroup(layout="row", flex="60", layout-align="end center")
+									| Type:
+									span(flex="5")
 									md-radio-group(ng-model="vm.sectionType")
 										md-radio-button(value="keyvalue") Name/Description
 										md-radio-button(value="table") Table
-								span(flex="5")
-								md-button.md-accent(ng-disabled="!vm.sectionTitle", ng-click="vm.addSection()") Add Section
 
 							// Table Titles input
 							.tableTitlesInput(ng-if="vm.showTableTitlesInput", layout="row", flex, layout-align="space-between center")
-								md-input-container.md-block(flex="30")
-									label Table Column 1 Title
-									input(ng-model="vm.tableColumn1Title", name="Table Column 1 Title")
-								md-input-container.md-block(flex="25")
-									label Table Column 2 Title
-									input(ng-model="vm.tableColumn2Title", name="Table Column 2 Title")
-								md-input-container.md-block(flex="25")
-									label Table Column 3 Title
-									input(ng-model="vm.tableColumn3Title", name="Table Column 3 Title")
+								md-input-container.md-block(flex="30", md-no-float)
+									input(ng-model="vm.tableColumn1Title", placeholder="Column 1 Title")
+								md-input-container.md-block(flex="25", md-no-float)
+									input(ng-model="vm.tableColumn2Title", placeholder="Column 2 Title")
+								md-input-container.md-block(flex="25", md-no-float)
+									input(ng-model="vm.tableColumn3Title", placeholder="Column 3 Title")
+
+							// Add section
+							.saveSection(layout="row", layout-align="start center")
+								md-button.md-accent(ng-disabled="!vm.sectionTitle", ng-click="vm.addSection()") Add Section
 
 						// Show sections
 						.sections(layout="column", flex)
-							div.md-padding.bid4freeWorkspaceSection(ng-repeat="section in vm.sections")
+							//div(style="background:red", flex)
+							div.md-padding.section(ng-repeat="section in vm.sections")
 								div(layout="column")
 									// Section title
 									.itemInput(layout="row", layout-align="start center")
@@ -57,7 +57,7 @@
 								// Show items
 								// Key/Value
 								div(ng-if="section.type==='keyvalue'")
-									md-content.items(ng-repeat="item in vm.sections[$index].items track by $index", layout="row", layout-align="start center")
+									md-content.items(ng-repeat="item in vm.sections[$index].items track by $index", layout="row", layout-align="space-between center")
 										label(flex="25") {{item.keys[0].name}}
 										//label(flex) {{item.values[0]}}
 										md-input-container.md-block.keyvalueValue(flex="65")
@@ -108,19 +108,19 @@
 					md-content.md-padding
 						//Total
 						.boqTotal(layout="row", flex)
-							h3(flex="10") Total
+							h3(flex="20") Total
 							h3 {{vm.boqTotal}}
 
 						// List of items
 						md-list.boqList
 							md-list-item.md-1-line.boqListTitles
-								p(flex="45") Type
+								p(flex="50") Type
 								p(flex="15", layout="row", layout-align="center center") Code
-								p(flex="15", layout="row", layout-align="center center") Quantity
+								p(flex="15", layout="row", layout-align="center center") Qty
 								p(flex="10", layout="row", layout-align="center center") Rate
 								p(flex="10", layout="row", layout-align="center center") Price
 							md-list-item.md-1-line(ng-repeat="item in vm.boq")
-								p(flex="45") {{item.type}}
+								p(flex="50") {{item.type}}
 								p(flex="15", layout="row", layout-align="center center") {{item.code}}
 								p(flex="15", layout="row", layout-align="center center") {{item.quantity}}
 								div(flex="10", layout="row", layout-align="center center")
@@ -143,10 +143,10 @@
 					md-content.md-padding
 
 
-			span.saveContainer(flex, layout="row", layout-align="end center")
-				label.md-accent.md-hue-2(ng-if="vm.showSaveConfirmation") Saved
+			span.saveContainer(flex, layout="column", layout-align="start center")
 				md-button.md-icon-button.md-accent(ng-click="vm.save()", aria-label="Save")
 					md-icon(class="fa fa-floppy-o")
+				label.md-accent.md-hue-2(ng-if="vm.showSaveConfirmation") Saved
 
 		md-content(flex="50")
 			viewermanager
