--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.css
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.css
@@ -13,11 +13,13 @@ bid4free-workspace {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     height: 100%; }
-    bid4free-workspace .bid4freeWorkspaceContainer md-content {
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px; }
-  bid4free-workspace .bid4freeWorkspaceSection {
-    border-bottom: solid 1px rgba(0, 0, 0, 0.12); }
+  bid4free-workspace md-content {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px; }
+  bid4free-workspace md-tabs {
+    height: calc(100vh - 115px); }
+  bid4free-workspace md-tab-content {
+    overflow: hidden; }
   bid4free-workspace md-radio-button {
     display: inline; }
   bid4free-workspace md-radio-button > * {
@@ -33,16 +35,16 @@ bid4free-workspace {
     margin-top: -8px; }
   bid4free-workspace .sectionInput .tableTitlesInput {
     margin-top: -20px; }
-  bid4free-workspace .saveContainer label {
-    margin-top: 5px;
-    color: #66BB6A; }
-  bid4free-workspace .saveContainer md-icon {
-    font-size: 25px !important; }
+  bid4free-workspace .sectionInput .saveSection {
+    margin-top: -20px;
+    margin-bottom: 10px; }
   bid4free-workspace .sections {
     overflow-y: auto;
     overflow-x: hidden;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    height: 600px; }
+    height: calc(100vh - 310px); }
+    bid4free-workspace .sections .section {
+      border-bottom: solid 1px rgba(0, 0, 0, 0.12); }
     bid4free-workspace .sections .tableTitles {
       margin-top: 20px;
       color: rgba(0, 0, 0, 0.6); }
@@ -72,3 +74,8 @@ bid4free-workspace {
     height: 20px; }
     bid4free-workspace .boqListInput input {
       text-align: center; }
+  bid4free-workspace .saveContainer label {
+    margin-top: 5px;
+    color: #66BB6A; }
+  bid4free-workspace .saveContainer md-icon {
+    font-size: 25px !important; }
