--- a/plugins/panel/panel.jade
+++ b/plugins/panel/panel.jade
@@ -6,6 +6,7 @@ div(ng-show="vm.showPanel")
 				content-data='contentItem'
 				ng-show='contentItem.show',
 				on-height-request="vm.heightRequest(contentItem, height)"
+				on-show-filter="vm.showFilter(show)"
 			)
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons(ng-class="{ active : vm.activate }")
