--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -30,7 +30,7 @@ div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp")
 	.panelContentContainer
 		.panelContentFilter(ng-if="vm.showFilter", layout="row")
 			div(flex="85")
-				md-input-container(md-no-float="")
+				md-input-container.md-block(md-no-float="")
 					input(type="text", ng-model="vm.filterInputText", placeholder="Filter")
 			div(flex="15", ng-if="vm.showClearFilterButton")
 				md-button.md-icon-button(ng-click="vm.clearFilter()", aria-label="Clear filter")
